fix server env.example

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,7 +1,7 @@
 PORT=5002
 APP_ID=
-ACCOUNT_API_KEY_ID=APP_ID=
+ACCOUNT_API_KEY_ID=
 ACCOUNT_API_KEY_SECRET=
 APP_API_KEY_ID=
-APP_API_KEY_SECRET=APP_ID=
-INTEGRATION_ID=APP_ID=
+APP_API_KEY_SECRET=
+INTEGRATION_ID=
